re-sort it by date before doing the job sort to fix split shifts

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ th{
 }
 
 #break, #lunch, #break2{
-    width: 5%;
+    width: 7%;
 }
 
 #label{
